Fix In-process content browsertests for Viz

Many of our current issues turned out to be due to missing shutdown
logic which caused the GPU thread to shutdown before the compositor,
leading to a number of DCHECKs, and a hang if those were removed.

This change allows the CompositorImpl to tear down before the GPU proc.

Bug: 851643
Change-Id: Ieb96da9b7132e4ccf8ebf71dc0ee920bfbeb4217
Reviewed-on: https://chromium-review.googlesource.com/1115875
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Commit-Queue: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570880}
Former-commit-id: f3d07b7ae4d87eee2f8c80958626391dfc91c5f8