content/shell/browser/shell_android.cc
@@ -28,6 +28,7 @@ void Shell::PlatformInitialize(const gfx::Size& default_window_size) {
 }
 
 void Shell::PlatformExit() {
+  DestroyShellManager();
 }
 
 void Shell::PlatformCleanUp() {
