content/shell/android/java/src/org/chromium/content_shell/ShellManager.java
@@ -126,12 +126,19 @@ public class ShellManager extends FrameLayout {
 
     /**
      * Destroys the Shell manager and associated components.
+     * Always called at activity exit, and potentially called by native in cases where we need to
+     * control the timing of mContentViewRenderView destruction. Must handle being called twice.
      */
+    @CalledByNative
     public void destroy() {
         // Remove active shell (Currently single shell support only available).
-        removeShell(mActiveShell);
-        mContentViewRenderView.destroy();
-        mContentViewRenderView = null;
+        if (mActiveShell != null) {
+            removeShell(mActiveShell);
+        }
+        if (mContentViewRenderView != null) {
+            mContentViewRenderView.destroy();
+            mContentViewRenderView = null;
+        }
     }
 
     private static native void nativeInit(Object shellManagerInstance);
